add_executable(search_example.exe ${CMAKE_CURRENT_SOURCE_DIR}/src/search_example.cc)
target_link_libraries(search_example.exe HepMC3::HepMC3 HepMC3::search )
set_target_properties(search_example.exe PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/outputs/${CMAKE_INSTALL_BINDIR}/$<0:>)
if (USE_INSTALLED_HEPMC3)
  install(TARGETS search_example.exe DESTINATION ${CMAKE_INSTALL_BINDIR})
endif()
